--- a/inst/doc/datatable-faq.Rnw
+++ b/inst/doc/datatable-faq.Rnw
@@ -303,7 +303,7 @@ Furthermore, matrices, especially sparse matrices, are often stored in a 3 colum
 
 \subsection{Can base be changed to do this then, rather than a new package?}
 \code{data.frame} is used \emph{everywhere} and so it is very difficult to make \emph{any} changes to it.
-\code{data.table} \emph{inherits} from \code{data.frame}. It \emph{is} a \code{data.frame}, too. A \code{data.table} \emph{can} be passed to any package that \emph{only} accepts \code{data.frame}. When that package uses \code{[.data.frame} syntax on the \code{data.table}, it works.
+\code{data.table} \emph{inherits} from \code{data.frame}. It \emph{is} a \code{data.frame}, too. A \code{data.table} \emph{can} be passed to any package that \emph{only} accepts \code{data.frame}. When that package uses \code{[.data.frame} syntax on the \code{data.table}, it works. It works because \code{[.data.table} looks to see where it was called from. If it was called from such a package, \code{[.data.table} diverts to \code{[.data.frame}.
 
 \subsection{I've heard that \code{data.table} syntax is analogous to SQL.}
 Yes :
@@ -345,7 +345,9 @@ A key advantage of column vectors in \proglang{R} is that they are \emph{ordered
   \code{NA} rows for each \code{NA}}
 \item{\code{DT[ColA==ColB]} is simpler than \code{DF[!is.na(ColA) \& !is.na(ColB) \& ColA==ColB,]}}
 \item{\code{data.frame(list(1:2,"k",1:4))} creates 3 columns, \code{data.table} creates one \code{list} column.}
-\item{\code{check.names} is by default \code{TRUE} in \code{data.frame} but \code{FALSE} in \code{data.table}, for convenience.} 
+\item{\code{check.names} is by default \code{TRUE} in \code{data.frame} but \code{FALSE} in \code{data.table}, for convenience.}
+\item{\code{stringsAsFactors} is by default \code{TRUE} in \code{data.frame} but \code{FALSE} in \code{data.table}, for efficiency. Since a global string cache was added to R, characters items are a pointer to the single cached string and there is no longer a performance benefit of coverting to factor.}
+\item{Atomic vectors in \code{list} columns are collapsed when printed using ", " in \code{data.frame}, but "," in \code{data.table} with a trailing comma after the 6th item to avoid accidental printing of large embedded objects.}
 \end{itemize}
 In \code{[.data.frame} we very often set \code{drop=FALSE}. When we forget, bugs can arise in edge cases where single columns are selected and all of a sudden a vector is returned rather than a single column \code{data.frame}. In \code{[.data.table} we took the opportunity to make it consistent and drop \code{drop}.
 \newline\newline
@@ -441,6 +443,25 @@ DT[,{ mySD = copy(.SD)
     by=a]
 @
 
+\subsection{\code{cannot change value of locked binding for '.N'}}
+Please upgrade to v1.8.1 or later. From this version, if \code{.N} is returned by \code{j} it is renamed to \code{N} to avoid any abiguity in any subsequent grouping between the \code{.N} special variable and a column called \code{".N"}.
+The old behaviour can be reproduced by forcing \code{.N} to be called \code{.N}, like this :
+<<>>=
+DT = data.table(a=c(1,1,2,2,2),b=c(1,2,2,2,1))
+DT
+DT[,list(.N=.N),list(a,b)]   # show intermediate result for exposition
+cat(try(
+    DT[,list(.N=.N),by=list(a,b)][,unique(.N),by=a]   # compound query more typical
+,silent=TRUE))
+@
+If you are already running v1.8.1 or later then the error message is now more helpful than the \code{cannot change value of locked binding} error.  As you can see above, since this vignette was produced using v1.8.1 or later. 
+The more natural syntax now works :
+<<>>=
+if (packageVersion("data.table") >= "1.8.1") {
+    DT[,.N,by=list(a,b)][,unique(N),by=a]
+}
+@
+
 \section{Warning messages}
 \subsection{\code{The following object(s) are masked from 'package:base': cbind, rbind}}
 This warning was present in v1.6.5 and v.1.6.6 only, when loading the package. The motivation was to allow \code{cbind(DT,DF)} to work, but as it transpired, broke (full) compatibility with package IRanges. Please upgrade to v1.6.7 or later. 
@@ -495,15 +516,14 @@ You can join the project and change the code and/or documentation yourself.
 \subsection{I think it's not great. How do I warn others about my experience?}
 Please put your vote and comments on \href{http://crantastic.org/packages/data-table}{Crantastic}. Please make it constructive so we have a chance to improve.
 
-\subsection{I have a question. I know the posting guide tells me to contact the maintainer (not r-help), but is there a larger group of people I can ask?}
-Yes. You can post to \href{mailto:datatable-help@lists.r-forge.r-project.org}{datatable-help}. It's like r-help, but just for this package. Feel free to answer questions there, too.
-\code{maintainer("<package name>")} returns the maintainer for any package and is where you should ask first (see \href{http://www.r-project.org/posting-guide.html}{R-help posting guide}). \code{maintainer("data.table")} returns datatable-help.
+\subsection{I have a question. I know the r-help posting guide tells me to contact the maintainer (not r-help), but is there a larger group of people I can ask?}
+Yes, there are two options. You can post to \href{mailto:datatable-help@lists.r-forge.r-project.org}{datatable-help}. It's like r-help, but just for this package. Or the \href{http://stackoverflow.com/questions/tagged/data.table}{\code{data.table} tag on Stack Overflow}. Feel free to answer questions in those places, too.
 
 \subsection{Where are the datatable-help archives?}
-The \href{http://datatable.r-forge.r-project.org/}{homepage} contains links to the archives in 4 different formats.
+The \href{http://datatable.r-forge.r-project.org/}{homepage} contains links to the archives in several formats.
 
 \subsection{I'd prefer not to contact datatable-help, can I mail just one or two people privately?}
-Sure. You're more likely to get a faster answer from datatable-help, though.
+Sure. You're more likely to get a faster answer from datatable-help or Stack Overflow, though. Asking publicly in those places helps build the knowledge base.
 
 \subsection{I have created a package that depends on \code{data.table}. How do I ensure my package is \code{data.table}-aware so that inheritance from \code{data.frame} works?}
 You don't need to do anything special. As long as your package has a namespace, and imports or depends on \code{data.table}, your package is detected as \code{data.table}-aware.
