--- a/inst/doc/datatable-faq.Rnw
+++ b/inst/doc/datatable-faq.Rnw
@@ -139,7 +139,7 @@ This was changed in v1.5.3. \code{X[Y]} now includes \code{Y}'s non-join columns
 \subsection{What is the difference between \code{X[Y]} and \code{merge(X,Y)}?}
 \code{X[Y]} is a join, looking up \code{X}'s rows using \code{Y} (or \code{Y}'s key if it has one) as an index.\newline
 \code{Y[X]} is a join, looking up \code{Y}'s rows using \code{X} (or \code{X}'s key if it has one) as an index.\newline
-\code{merge(X,Y)} does both ways at the same time. The number of rows of \code{X[Y]} and \code{Y[X]} usually differ; whereas the number of rows returned by \code{merge(X,Y)} and \code{merge(Y,X)} is the same.
+\code{merge(X,Y)}\footnote{Here we mean either the \code{merge} \emph{method} for \code{data.table} or the \code{merge} method for \code{data.frame} since both methods work in the same way in this respect. See \code{?merge.data.table} and FAQ 2.24 for more information about method dispatch.} does both ways at the same time. The number of rows of \code{X[Y]} and \code{Y[X]} usually differ; whereas the number of rows returned by \code{merge(X,Y)} and \code{merge(Y,X)} is the same.
 
 \emph{BUT} that misses the main point. Most tasks require something to be done on the data after a join or merge. Why merge all the columns of data, only to use a small subset of them afterwards? You may suggest \code{merge(X[,ColsNeeded1],Y[,ColsNeeded2])}, but that takes copies of the subsets of data, and it requires the programmer to work out which columns are needed. \code{X[Y,j]} in data.table does all that in one step for you. When you write \code{X[Y,sum(foo*bar)]}, \code{data.table} automatically inspects the \code{j} expression to see which columns it uses.  It will only subset those columns only; the others are ignored. Memory is only created for the columns the \code{j} uses, and \code{Y} columns enjoy standard \proglang{R} recycling rules within the context of each group. Let's say \code{foo} is in \code{X}, and \code{bar} is in \code{Y} (along with 20 other columns in \code{Y}). Isn't \code{X[Y,sum(foo*bar)]} quicker to program and quicker to run than a \code{merge} followed by a \code{subset}?
 
@@ -397,6 +397,17 @@ rm("cbind.data.frame")
 \end{itemize}
 If you know of a better solution, that still solves all the issues above, then please let us know and we'll gladly change it.
 
+\subsection{I've read about method dispatch (e.g. \code{merge} may or may not dispatch to \code{merge.data.table}) but \emph{how} does R know how to dispatch? Are dots significant or special? How on earth does R know which function to dispatch, and when?}
+This comes up quite a lot, but it's really earth shatteringly simple. A function such as \code{merge} is \emph{generic} if it consists of a call to \code{UseMethod}. When you see people talking about whether or not functions are \emph{generic} functions they are merely typing the function, without \code{()} afterwards, looking at the program code inside it and if they see a call to \code{UseMethod} then it is \emph{generic}.  What does \code{UseMethod} do? It literally slaps the function name together with the class of the first argument, separated by period (\code{.}) and then calls that function, passing along the same arguments. It's that simple. For example, \code{merge(X,Y)} contains a \code{UseMethod} call which means it then \emph{dispatches} (i.e. calls) \code{paste("merge",class(X),sep=".")}. Functions with dots in may or may not be methods. The dot is irrelevant really. Other than dot being the separator that \code{UseMethod} uses. Knowing this background should now highlight why, for example, it is obvious to R folk that \code{as.data.table.data.frame}  is the \code{data.frame} method for the \code{as.data.table} generic function. Further, it may help to elucidate that, yes you are correct, it is not obvious from its name alone that \code{ls.fit} is not the fit method of the \code{ls} generic function. You only know that by typing \code{ls} (not \code{ls()}) and observing it isn't a single call to \code{UseMethod}.
+
+You might now ask: where is this documented in R? Answer: it's quite clear, but, you need to first know to look in \code{?UseMethod}, and \emph{that} help file contains : 
+
+ "When a function calling UseMethod('fun') is applied to an object with class attribute c('first', 'second'), the system searches for a function called fun.first and, if it finds it, applies it to the object. If no such function is found a function called fun.second is tried. If no class name produces a suitable function, the function fun.default is used, if it exists, or an error results."
+
+Happily, an internet search for "How does R method dispatch work" (at the time of writing) returns the \code{?UseMethod} help page as the top link. Admittedly, other links rapidly descend into the intracies of S3 vs S4, internal generics and so on.
+
+However, features like basic S3 dispatch (pasting the function name together with the class name) is why some R folk love R. It's so simple. No complicated registration or signature is required. There isn't much needed to learn. To create the \code{merge} method for \code{data.table} all that was required, literally, was to merely create a function called \code{merge.data.table}.
+
 \section{Questions relating to compute time}
 
 \subsection{I have 20 columns and a large number of rows. Why is an expression of one column so quick?}
@@ -526,7 +537,7 @@ The \href{http://datatable.r-forge.r-project.org/}{homepage} contains links to t
 Sure. You're more likely to get a faster answer from datatable-help or Stack Overflow, though. Asking publicly in those places helps build the knowledge base.
 
 \subsection{I have created a package that depends on \code{data.table}. How do I ensure my package is \code{data.table}-aware so that inheritance from \code{data.frame} works?}
-You don't need to do anything special. As long as your package has a namespace, and imports or depends on \code{data.table}, your package is detected as \code{data.table}-aware.
+You don't need to do anything special. Just include \code{data.table} in either the Imports or Depends field of your package's DESCRIPTION file.
 
 \subsection{Why is this FAQ in pdf format? Can it moved to a website?}
 This FAQ (and the intro and timing documents) are \emph{vignettes} written using Sweave. The benefits of Sweave include the following:
